# Tee

./: Cargo.toml  README.md  build.rs
docs/: # Why the Tee : CMBS Architecture Is CRDT-Safe.md  architecture-overview.md  cmbs-incident-identity.md
proto/: tee.proto
src/: config.rs  lib.rs  main.rs  proto_convert.rs  service.rs
src/domain/: edge.rs  edge_type.rs  graph.rs  mod.rs  node.rs  node_type.rs  provenance.rs
src/schema/: validation.rs
src/store/: memory.rs  mod.rs
